<resources>
    <string name="app_name">Shaadi</string>

    <string name="noMemory">No memory</string>
    <string name="imageSaveFailed">Image saved failed</string>

    <string name="tagline">No More Lonely Day Get Coupled</string>
    <string name="quote_of_app">Some people cross your path at most unexpected and change your whole direction.</string>
    <string name="login_with_fb">FB Login</string>
    <string name="your_profile">Your Profile</string>
    <string name="who_r_u">Who are You ?</string>
    <string name="name">Name</string>
    <string name="about_me">About me</string>
    <string name="orientation">Orientation</string>
    <string name="hair">Hair</string>
    <string name="eyes">Eyes</string>
    <string name="body_type">Body Type</string>
    <string name="age">Age</string>
    <string name="about">About</string>
    <string name="interest">Interest</string>
    <string name="hobbies">Hobbies</string>
    <string name="loremipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>


    <string name="facebook_app_id">2758507017583249</string>
    <string name="fb_login_protocol_scheme">fb2758507017583249</string>

</resources>