<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".login.ui.Login">



        <TextView
            android:id="@+id/tagline"
            android:text="@string/tagline"
            app:layout_constraintBottom_toTopOf="@id/quote_of_app"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/colorPrimary"
            android:textSize="30sp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="80dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/quote_of_app"
            android:text="@string/quote_of_app"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/login_with_fb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:id="@+id/login_with_fb"
            android:background="@color/colorPrimary"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="40dp"
            android:textColor="@color/colorAccent"
            android:gravity="left|center_vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:paddingTop="20dp"
            android:elevation="4dp"
            android:paddingBottom="20dp"
            android:drawableEnd="@drawable/ic_right_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:cornerRadius="8dp"
            android:text="@string/login_with_fb"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>